--- a/app/views/lesli/wrappers/_application-devise-simple.erb
+++ b/app/views/lesli/wrappers/_application-devise-simple.erb
@@ -44,7 +44,7 @@ Building a better future, one line of code at a time.
                     :class => "#{lesli_instance_code}-logo",        # dynamic class according to the instance
                     :alt => "Main logo") 
                 %>
-                <h1 class="title has-text-primary">
+                <h1 class="title is-size-4 has-text-primary">
                     <%#= I18n.t("core.users/sessions.view_text_welcome") %>
                     <%= title %>
                 </h1>
