--- a/lib/scss/layouts/application-navigation.scss
+++ b/lib/scss/layouts/application-navigation.scss
@@ -32,7 +32,7 @@ Building a better future, one line of code at a time.
 
 nav.lesli-application-navigation {
     background-color: var(--lesli-navbar-color);
-    border-bottom: 1px solid rgba(172,179,194,.2);
+    border-bottom: 1px solid rgba(172,179,194,.5);
     width: 100%;
 
     ul {
@@ -47,16 +47,26 @@ nav.lesli-application-navigation {
 
             // link label
             span.text {
-                margin-left: 6px;
-                font-size: 1rem;
-                display: inline-block;
                 flex-grow: 1;
+                font-size: 1rem;
                 text-align: left;
+                display: inline-block;
             }
 
             [class^="ri-"] {
                 font-size: 20px;
             }
+        }
+    }
+}
+
+
+@include lesli-css-breakpoint-small {
+
+    nav.lesli-application-navigation {    
+        ul {
+            display: block;
+            justify-content: center;
         }
     }
 }
