--- a/lib/scss/settings/variables.scss
+++ b/lib/scss/settings/variables.scss
@@ -44,7 +44,7 @@ $lesli-navbar-color: white !default;
 $lesli-footer-color: white !default;
 $lesli-sidebar-color: white !default;
 $lesli-sidebar-hover: white !default;
-$lesli-color-background: #f6f8fb !default;
+$lesli-color-background: #f8f4f4 !default;
 
 
 
