feat: improve header & navigation responsive

--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -54,8 +54,9 @@ Building a better future, one line of code at a time.
     show-support>
     
     <template v-slot:brand>
-        <%= customization_instance_logo_tag(logo: "app-icon", options: { alt: "Lesli app logo", class: "is-hidden-desktop" }) %>
-        <%= customization_instance_logo_tag(logo: "app-logo", options: { alt: "Lesli app logo", class: "is-hidden-touch" }) %>
+        <%#= customization_instance_logo_tag(logo: "app-icon", options: { alt: "Lesli app logo", class: "is-hidden-desktop" }) %>
+        <%#= customization_instance_logo_tag(logo: "app-logo", options: { alt: "Lesli app logo", class: "is-hidden-touch" }) %>
+        <%= customization_instance_logo_tag(logo: "app-logo", options: { alt: "Lesli app logo" }) %>
     </template>
 
     <template v-slot:end>
