--- a/app/assets/stylesheets/lesli/templates/application.css
+++ b/app/assets/stylesheets/lesli/templates/application.css
@@ -29023,10 +29023,14 @@ Building a better future, one line of code at a time.
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
 */
+.navbar {
+  position: static;
+}
+
 nav.lesli-application-navigation {
   background-color: var(--lesli-navbar-color);
-  border-top: 1px solid rgba(172, 179, 194, 0.5);
   border-bottom: 1px solid rgba(172, 179, 194, 0.5);
+  border-top: 1px solid rgba(172, 179, 194, 0.5);
   width: 100%;
 }
 nav.lesli-application-navigation .navbar-menu {
