--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -48,10 +48,10 @@ Building a better future, one line of code at a time.
 <lesli-application-header 
     engine-path="<%= "/dashboard" if defined?(LesliDashboard) %>"
     <%= "show-focus" if defined?(LesliFocus) %>
+    <%= "show-bell" if defined?(LesliBell) %>
+    <%= "show-support" if defined?(LesliSupport) %>
     show-profile
-    show-engines
-    show-bell
-    show-support>
+    show-engines>
     
     <template v-slot:brand>
         <%#= customization_instance_logo_tag(logo: "app-icon", options: { alt: "Lesli app logo", class: "is-hidden-desktop" }) %>
