simple courier structure

--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -36,6 +36,7 @@ Building a better future, one line of code at a time.
 @import "lesli-css/bulma";
 @import "lesli-vue/elements.css";
 @import "lesli-vue/components.css";
+@import "lesli-vue/composables.css";
 
 
 // · Configuration & variables
