--- a/app/views/lesli/partials/_application-lesli-notifications.html.erb
+++ b/app/views/lesli/partials/_application-lesli-notifications.html.erb
@@ -1,4 +1,5 @@
-/*
+<%
+=begin
 
 Lesli
 
@@ -27,15 +28,17 @@ Building a better future, one line of code at a time.
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
-// ·  
-
-*/
-
 // · 
+=end
+%>
 
-section.lesli-application-bell-announcements {
-    .container {
-        margin-top: 15px;
-        margin-bottom: -15px;
-    }
-}
+
+<%# Show announcements container only if cloud bell is installed %>
+<% if defined?(LesliBell)%>
+    <application-component-announcements></application-component-announcements>
+<% end %>
+
+
+<%# Search results container 
+<application-component-search></application-component-search>
+%>
