--- a/app/views/lesli/partials_vue/_application-head.html.erb
+++ b/app/views/lesli/partials_vue/_application-head.html.erb
@@ -18,13 +18,13 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS Development Framework.
+Lesli · Ruby on Rails SaaS development platform.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -32,31 +32,25 @@ Building a better future, one line of code at a time.
 =end
 %>
 
-<%# check if custom navigation partial exists, getting the path from application helper %>
-<% 
-    engine = lesli_engine.dig(:code) 
-    custom_sidebar_path = if engine == "root"
-        "partials/engine-navigation"
-        else
-        "#{engine}/engine-navigation" 
-    end
-%>
+<%# the charset attribute specifies the character encoding for the HTML document. %>
+<meta charset="utf-8">
+
+<%# this gives the browser instructions on how to control the page's dimensions and scaling. %>
+<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+
+<%# defines the title of the document. %>
+<title><%#= website_title %></title>
+
+<%# rails standard meta tags %>
+<%= csrf_meta_tags %>
+<%#= favicon %>
+
+<%# provide a short description of the page %>
+<meta name="description" content="<%#= website_meta_description %>">
 
 
-<%# validate the path to be sure the partial exists when trying to render it %>
-<% custom_sidebar_exists = lookup_context.exists?(custom_sidebar_path, nil, true) %>
-
-<%# render navigation partial %>
-<% if custom_sidebar_exists %>
-<nav class="lesli-navbar navbar lesli-application-navigation" role="navigation" aria-label="main navigation">
-    <div class="container">
-        <div class="navbar-menu">
-            <div class="navbar-end">
-                <%= render partial: custom_sidebar_path %>
-            </div>
-        </div>
-    </div>
-</nav>
-<% else %>
-    <!-- no navigation found -->
+<% appstore_app_id = Rails.application.credentials.dig(:providers, :apple, :app_id) %>
+<% if appstore_app_id %>
+    <meta name="apple-itunes-app" content="app-id=<%= appstore_app_id %>">
 <% end %>
