--- a/app/views/lesli/partials_vue/_application-lesli-content.html.erb
+++ b/app/views/lesli/partials_vue/_application-lesli-content.html.erb
@@ -18,9 +18,9 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS Development Framework.
+Lesli · Ruby on Rails SaaS development platform.
 
-Made with ♥ by LesliTech
+Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
@@ -31,16 +31,8 @@ Building a better future, one line of code at a time.
 // · 
 =end
 %>
+<turbo-frame id="main-content">
+  <%= yield %>
+</turbo-frame>
 
-<%= javascript_importmap_tags %>
-<%#
-<script src="https://js.honeybadger.io/v3.2/honeybadger.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-Honeybadger.configure({
-    apiKey: "<%= Rails.application.credentials.dig(:providers, :honey_badger, :api_key) % >",
-    revision: "<%= @account.dig(:revision, :version) % >-<%= @account.dig(:revision, :build) % >",
-    environment: "<%= Rails.env % >",
-    reportData: <%= Rails.env.production? % >
-})
-</script>
-%>
+<%#= yield %>
