--- a/app/views/lesli/partials_vue/_application-lesli-javascript.html.erb
+++ b/app/views/lesli/partials_vue/_application-lesli-javascript.html.erb
@@ -20,11 +20,11 @@ along with this program. If not, see http://www.gnu.org/licenses/.
 
 Lesli · Ruby on Rails SaaS Development Framework.
 
-Made with ♥ by https://www.lesli.tech
+Made with ♥ by LesliTech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -32,31 +32,30 @@ Building a better future, one line of code at a time.
 =end
 %>
 
-<%# check if custom navigation partial exists, getting the path from application helper %>
-<% 
-    engine = lesli_engine.dig(:code) 
-    custom_sidebar_path = if engine == "root"
-        "partials/engine-navigation"
-        else
-        "#{engine}/engine-navigation" 
-    end
+<%# Temporary to avoid reference errors %>
+<%= javascript_include_tag "lesli/i18n" %>
+
+
+<%# Including main Lesli application %>
+<%= javascript_include_tag(lesli_application_javascript_path()) %>
+
+
+<%# Set language for JavaScript apps %>
+<script>
+    if (typeof i18n !== "undefined") {
+        i18n.locale = "<%#= I18n.locale %>"
+    }
+</script>
+
+
+<%#
+<script src="https://js.honeybadger.io/v3.2/honeybadger.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+Honeybadger.configure({
+    apiKey: "<%= Rails.application.credentials.dig(:providers, :honey_badger, :api_key) % >",
+    revision: "<%= @account.dig(:revision, :version) % >-<%= @account.dig(:revision, :build) % >",
+    environment: "<%= Rails.env % >",
+    reportData: <%= Rails.env.production? % >
+})
+</script>
 %>
-
-
-<%# validate the path to be sure the partial exists when trying to render it %>
-<% custom_sidebar_exists = lookup_context.exists?(custom_sidebar_path, nil, true) %>
-
-<%# render navigation partial %>
-<% if custom_sidebar_exists %>
-<nav class="lesli-navbar navbar lesli-application-navigation" role="navigation" aria-label="main navigation">
-    <div class="container">
-        <div class="navbar-menu">
-            <div class="navbar-end">
-                <%= render partial: custom_sidebar_path %>
-            </div>
-        </div>
-    </div>
-</nav>
-<% else %>
-    <!-- no navigation found -->
-<% end %>
