--- a/app/views/lesli/partials_vue/_application-lesli-navigation.html.erb
+++ b/app/views/lesli/partials_vue/_application-lesli-navigation.html.erb
@@ -38,7 +38,7 @@ Building a better future, one line of code at a time.
     custom_sidebar_path = if engine == "root"
         "partials/engine-navigation"
         else
-        "#{engine}/engine-navigation" 
+        "#{engine}/partials/engine-navigation" 
     end
 %>
 
@@ -46,17 +46,17 @@ Building a better future, one line of code at a time.
 <%# validate the path to be sure the partial exists when trying to render it %>
 <% custom_sidebar_exists = lookup_context.exists?(custom_sidebar_path, nil, true) %>
 
+
 <%# render navigation partial %>
 <% if custom_sidebar_exists %>
-<nav class="lesli-navbar navbar lesli-application-navigation" role="navigation" aria-label="main navigation">
-    <div class="container">
-        <div class="navbar-menu">
-            <div class="navbar-end">
-                <%= render partial: custom_sidebar_path %>
-            </div>
-        </div>
-    </div>
-</nav>
+    <%#
+    <lesli-navbar class="lesli-application-navigation">
+        <template v-slot:end>
+            <%= render partial: custom_sidebar_path % >
+        </template>
+    </lesli-navbar>
+    %>
+    <%= render partial: custom_sidebar_path %>
 <% else %>
     <!-- no navigation found -->
 <% end %>
