--- a/app/views/lesli/partials_vue/_application-lesli-scss.html.erb
+++ b/app/views/lesli/partials_vue/_application-lesli-scss.html.erb
@@ -20,11 +20,11 @@ along with this program. If not, see http://www.gnu.org/licenses/.
 
 Lesli · Ruby on Rails SaaS Development Framework.
 
-Made with ♥ by https://www.lesli.tech
+Made with ♥ by LesliTech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -32,31 +32,29 @@ Building a better future, one line of code at a time.
 =end
 %>
 
-<%# check if custom navigation partial exists, getting the path from application helper %>
-<% 
-    engine = lesli_engine.dig(:code) 
-    custom_sidebar_path = if engine == "root"
-        "partials/engine-navigation"
-        else
-        "#{engine}/engine-navigation" 
-    end
+<%# Hide vue until vue finishes compilation %>
+<%# <style>[v-cloak] { display: none !important; }</style> %>
+
+
+<%
+# Defining color customization 
+# colors will be override with the ones defined in the database if custom colors exists
+# if there is no custom colors defined, the var() function will return the lesli colors
+@colors = @lesli.dig(:customization, :colors) || {}
 %>
 
 
-<%# validate the path to be sure the partial exists when trying to render it %>
-<% custom_sidebar_exists = lookup_context.exists?(custom_sidebar_path, nil, true) %>
+<%# Defining color palette %> 
+<style>
+:root {
+    <% @colors.each_pair do |key, value| %>
+    <%= "--#{ key.to_s.gsub('_','-') }: #{ value.to_s };" if value %>
+    <% end %>
+}
+</style>
 
-<%# render navigation partial %>
-<% if custom_sidebar_exists %>
-<nav class="lesli-navbar navbar lesli-application-navigation" role="navigation" aria-label="main navigation">
-    <div class="container">
-        <div class="navbar-menu">
-            <div class="navbar-end">
-                <%= render partial: custom_sidebar_path %>
-            </div>
-        </div>
-    </div>
-</nav>
-<% else %>
-    <!-- no navigation found -->
-<% end %>
+
+<%# Loading stylesheets %> 
+<%= stylesheet_link_tag lesli_application_stylesheet_path(:lesli), media: "all" %>
+<%= stylesheet_link_tag lesli_application_stylesheet_path(), media: "all" %>
+
