--- a/app/views/lesli/partials_vue/_application-lesli-sidebar.html.erb
+++ b/app/views/lesli/partials_vue/_application-lesli-sidebar.html.erb
@@ -18,13 +18,13 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS Development Framework.
+Lesli · Ruby on Rails SaaS development platform.
 
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -33,30 +33,18 @@ Building a better future, one line of code at a time.
 %>
 
 <%# check if custom navigation partial exists, getting the path from application helper %>
-<% 
-    engine = lesli_engine.dig(:code) 
-    custom_sidebar_path = if engine == "root"
-        "partials/engine-navigation"
-        else
-        "#{engine}/engine-navigation" 
-    end
-%>
-
+<% custom_sidebar_path = "#{lesli_engine.dig(:code)}/partials/engine-sidebar" %>
 
 <%# validate the path to be sure the partial exists when trying to render it %>
 <% custom_sidebar_exists = lookup_context.exists?(custom_sidebar_path, nil, true) %>
 
 <%# render navigation partial %>
 <% if custom_sidebar_exists %>
-<nav class="lesli-navbar navbar lesli-application-navigation" role="navigation" aria-label="main navigation">
-    <div class="container">
-        <div class="navbar-menu">
-            <div class="navbar-end">
+    <aside class="lesli-application-sidebar">
+        <nav>
+            <ul>            
                 <%= render partial: custom_sidebar_path %>
-            </div>
-        </div>
-    </div>
-</nav>
-<% else %>
-    <!-- no navigation found -->
+            </ul>
+        </nav>
+    </aside>
 <% end %>
