--- a/app/views/lesli/partials_vue/_application-public-javascript.html.erb
+++ b/app/views/lesli/partials_vue/_application-public-javascript.html.erb
@@ -24,7 +24,7 @@ Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -32,31 +32,21 @@ Building a better future, one line of code at a time.
 =end
 %>
 
-<%# check if custom navigation partial exists, getting the path from application helper %>
-<% 
-    engine = lesli_engine.dig(:code) 
-    custom_sidebar_path = if engine == "root"
-        "partials/engine-navigation"
-        else
-        "#{engine}/engine-navigation" 
-    end
-%>
+
+<% is_devise = controller_path.split('/')[0] == "users" %>
 
 
-<%# validate the path to be sure the partial exists when trying to render it %>
-<% custom_sidebar_exists = lookup_context.exists?(custom_sidebar_path, nil, true) %>
+<%# Load specific javascript files for devise actions (login,register,etc) %>
+<%= javascript_include_tag("lesli/#{controller_path}") if is_devise %>
 
-<%# render navigation partial %>
-<% if custom_sidebar_exists %>
-<nav class="lesli-navbar navbar lesli-application-navigation" role="navigation" aria-label="main navigation">
-    <div class="container">
-        <div class="navbar-menu">
-            <div class="navbar-end">
-                <%= render partial: custom_sidebar_path %>
-            </div>
-        </div>
-    </div>
-</nav>
-<% else %>
-    <!-- no navigation found -->
-<% end %>
+
+<%# Load standard files %>
+<%#= javascript_include_tag(application_javascript_path()) unless is_devise %> 
+
+
+<%# Set language for JavaScript apps %>
+<script>
+    if (typeof i18n !== "undefined") {
+        i18n.locale = "<%= I18n.locale %>"
+    }
+</script>
