--- a/lib/scss/layouts/application-container.scss
+++ b/lib/scss/layouts/application-container.scss
@@ -30,6 +30,7 @@ Building a better future, one line of code at a time.
 // · 
 */
 
-section.lesli-application-container {
+section.lesli-application-container,
+turbo-frame.lesli-application-container {
     padding: 1rem;
 }
