--- a/app/views/lesli/partials/_application-lesli-navigation.html.erb
+++ b/app/views/lesli/partials/_application-lesli-navigation.html.erb
@@ -38,7 +38,7 @@ Building a better future, one line of code at a time.
     custom_sidebar_path = if engine == "root"
         "partials/engine-navigation"
         else
-        "#{engine}/engine-navigation" 
+        "#{engine}/partials/engine-navigation" 
     end
 %>
 
