--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -54,7 +54,7 @@ Building a better future, one line of code at a time.
         <%#= render partial: "lesli/partials/application-lesli-footer" %>
     </main>
     <%= render partial: "lesli/partials/application-lesli-javascript" %>
-    <%#= render partial: "lesli/partials/application-lesli-icons" %>
+    <%= render partial: "lesli/partials/application-lesli-icons" %>
     <%#= render partial: "lesli/partials/application-analytics" %>
 </body>
 </html>
