--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -40,7 +40,7 @@ Building a better future, one line of code at a time.
     <%= render partial: "lesli/partials/application-lesli-scss" %>
     <meta name="turbo-prefetch" content="false">
 </head>
-<body data-turbo="true">
+<body data-turbo="true" class="<%= application_body_class %>">
     <main id="lesli-application">
         <%= render partial: "lesli/partials/application-lesli-header" %>
         <%= render partial: "lesli/partials/application-lesli-navigation" %>
